# cam-analyzer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CAM_ANALYZER_DEEP_ARCHITECTURE_REVIEW_CLAUDE_OPUS_4_8_2026-06-17.md  CAM_ANALYZER_REVIEW_MITIGATION_PLAN_2026-06-17.md  CAM_ANALYZER_RUN_RETROSPECTIVE_CAM_PROFILE_ARCHITECTURE_0D48EDE6_CLAUDE_OPUS_4_8_2026-06-16.md  Camshaft_Analysis_Spec.md  Makefile  ONE_SHOT_IMPLEMENTATION_PROMPT.md  README.md  prompt.md  pyproject.toml
.githooks/: pre-push
docs/: CLAIMS_LEDGER.md  index.md
docs/decisions/: D007.md  adr-derivatives-operator-trusted.md  decision-log.md
docs/design/: PROBLEM_BRIEF.md  ROUND1_SYNTHESIS.md
docs/explanation/: dcr-report-wr250r-webcam-81-651.md  domain-driven-design.md
docs/how-to/: add-a-new-source.md
docs/reference/: spec.md  ubiquitous-language.md
docs/rfc/: 0001-honest-typed-boundary.md  (+3 more)
examples/: wr250r-webcam-81651-13.5piston.json
scripts/: verify_svg_layout.py
tests/: conftest.py  test_analysis_timing.py  test_approximate_derivatives.py  test_architecture_boundary.py  test_architecture_boundary_relative.py  test_cam_card.py  test_cam_card_source.py  test_canonical_profile.py  test_cli.py  test_conformance_traps.py  test_derivative_uncertainty_band.py  test_dynamic_compression.py  test_package_metadata.py  test_profile_quality.py  test_provenance_map.py  test_reference_report_golden.py  test_safety_and_reporting.py  test_value_and_result.py  test_visualization_grammar.py  test_visualization_projection.py  test_visualization_svg.py  test_visualization_timing_projection.py
(+56 files in other folders)
